temp fix for scrollbars in post modal

--- a/application/frontend/src/components/Modals/Modal.module.css
+++ b/application/frontend/src/components/Modals/Modal.module.css
@@ -9,7 +9,7 @@
    background-color: var(--reversed-txt-clr);
    box-shadow: var(--elevation-10);
    border-radius: 10px;
-   overflow: auto;
+   overflow: hidden;
 }
 
 .overlay{
